# sd-project

./: .gitignore  docker-compose.yml  readme.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2641aeb85ca2_initial_schema.py  6311b35366a1_initial_schema_with_uuid_pks.py  65b73754294d_refactor_to_rules_based_availability.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  appointment.py  available_slot.py  base.py  doctor.py  doctor_schedule.py  medical_record.py  notification.py  patient.py  user.py
backend/app/routers/: appointments.py  auth.py  doctors.py  medical_records.py  notifications.py  patients.py  reports.py
backend/app/schemas/: appointment.py  auth.py  common.py  doctor.py  medical_record.py  notification.py  patient.py  report.py
backend/app/scripts/: seed.py
backend/app/services/: appointments_service.py  auth_service.py  doctors_service.py  email_service.py  medical_records_service.py  notifications_service.py  patients_service.py  reports_service.py
backend/app/templates/email/: appointment_cancelled.html  appointment_scheduled.html  welcome.html
backend/app/utils/: encryption.py  security.py
backend/database/: .gitkeep
backend/tests/: conftest.py
backend/tests/e2e/: test_appointments_e2e.py  test_auth_e2e.py  test_doctor_flow.py  test_patient_flow.py
backend/tests/regression/: test_appointment_overlap.py  test_concurrency.py  test_schedule_edge_cases.py
backend/tests/unit/: test_email_service.py  test_security.py
(+7 files in other folders)
