[tool.poetry]
name = "mediapp-api"
version = "1.0.0"
description = "Sistema de Gestión de Citas Médicas — API REST"
authors = ["MediApp Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.15.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.2.0"
cryptography = "^44.0.0"
pydantic = {extras = ["email-validator"], version = "^2.11.0"}
pydantic-settings = "^2.9.0"
slowapi = "^0.1.9"
python-multipart = "^0.0.20"
email-validator = "^2.3.0"
resend = "^2.29.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
